# event_ticketing

./: .env.sample  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  TODO.md  docker-compose.yml  pytest.ini  requirements-dev.txt
app/: main.py
backend/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/adapters/: __init__.py
backend/app/api/: routes.py  utils.py
backend/app/api/v1/: deps.py
backend/app/application/: __init__.py  http_exceptions.py  uow.py  use_cases.py
backend/app/application/abc/: uow.py  use_case.py
backend/app/application/events/: use_cases.py
backend/app/application/uow/: sqlalchemy_uow.py
backend/app/application/use_case_factory/: common.py  factory.py  uow.py  use_case_factory.py
backend/app/application/use_cases/: common.py  entity_use_cases.py  uow.py  use_case_factory.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/domain/: __init__.py
backend/app/domain/abc/: repository.py  service.py
backend/app/domain/events/: entities.py  repositories.py  services.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/db/: base.py  session.py  utils.py
backend/tests/: conftest.py  test_ws.py  utils.py
backend/tests/api/: test_default_routes.py  test_events_routes.py  test_events_schema.py
backend/tests/application/: test_create_event_use_case.py  test_events_use_case.py  test_uow.py  test_use_case_factory.py
backend/tests/domain/: test_event_creation.py
frontend/: README.md
(+15 files in other folders)
