[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
]

[tool.isort]
profile = "black"
line_length = 91
known_first_party = "app"
extend_skip = ".gitignore,.dockerignore"

[tool.flake8]
max-line-length = 91
ignore = "E701"

[tool.pytest]
testpaths = [
  "tests"
]
asyncio_mode = "auto"
